# omegat-borrowing-setup

./: 231013_borrowing_mapping-copy.ods  main.py  pyproject.toml
